--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.9.5",
     "@apollo/server": "^4.10.0",
     "graphql": "^16.8.1"
   }
